--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.2.0",
     "axios": "~0.21.0",
     "classnames": "^2.3.1",
     "node-sass": "^4.14.1",
