--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-router-dom": "5.1.7",
     "axios": "~0.21.0",
     "classnames": "^2.3.1",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.6.2",
@@ -23,6 +22,7 @@
     "redux": "4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "sass": "1.58.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
