--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "5.1.7",
     "axios": "~0.21.0",
     "classnames": "^2.3.1",
+    "express": "^4.18.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.6.2",
